# vk_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  compile_shader.bat
sandbox/: CMakeLists.txt
sandbox/include/: buffer.hpp  command.hpp  image.hpp  render_system.hpp  vk_sandbox.hpp
sandbox/old/: ktx_image.cpp  stb_image.cpp  vk_sandbox.cpp  vk_systems.cpp
sandbox/reorganization/: common.hpp  image_info.hpp  ktx_image.cpp  ktx_image.hpp  math.hpp  vk.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_commandbuffer.cpp  vk_commandbuffer.hpp  vk_depthstencil.hpp  vk_drawcommand.cpp  vk_drawcommand.hpp  vk_fence.cpp  vk_fence.hpp  vk_framebuffer.cpp  vk_framebuffer.hpp  vk_gpu.cpp  vk_gpu.hpp  vk_logicaldevice.cpp  vk_logicaldevice.hpp  vk_pipeline.hpp  vk_rendertarget.cpp  vk_rendertarget.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_systems.cpp  vk_systems.hpp  vk_texture.hpp  vk_win32.cpp  vk_win32.hpp  win32.cpp  win32.hpp
sandbox/shader/: shader.frag  shader.vert
sandbox/src/: common.hpp  deferred_shading.cpp  deferred_shading.hpp  gltf_model.hpp  ktx_image.cpp  ktx_image.hpp  main.cpp  math.hpp  render_system.cpp  stb_image.cpp  stb_image.hpp  vertex_info.hpp  vk.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_drawcommand.cpp  vk_drawcommand.hpp  vk_framebuffer.cpp  vk_framebuffer.hpp  vk_gltf_model.cpp  vk_gltf_model.hpp  vk_gpu.cpp  vk_gpu.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_rendertarget.cpp  vk_rendertarget.hpp  vk_sandbox.cpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_systems.cpp  vk_systems.hpp  vk_texture.hpp  vk_utilities.cpp  vk_vertex.hpp  vk_win32.cpp  vk_win32.hpp  win32.cpp  win32.hpp
shader/: shader.frag  shader.vert
