cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(vk_sandbox)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Debug)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix for Debug mode")
else()
	unset(CMAKE_DEBUG_POSTFIX)
endif()

if((CMAKE_BUILD_TYPE STREQUAL "Debug") OR (CMAKE_BUILD_TYPE STREQUAL "Release"))
  string(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE_UPPER)
  string(TOLOWER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE_LOWER)
endif()

set(CMAKE_INCLUDE_CURRENT_DIR ON)
if(CMAKE_GENERATOR STREQUAL "Ninja")
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/x64/${CMAKE_BUILD_TYPE})
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/x64/${CMAKE_BUILD_TYPE})
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/x64/${CMAKE_BUILD_TYPE})
elseif (CMAKE_GENERATOR MATCHES  "Visual Studio 16 2019")
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/x64/)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/x64/)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/x64/)
endif()

set(VK_ROOT $ENV{VULKAN_SDK})

set(GLM_ROOT ${CMAKE_SOURCE_DIR}/external/glm)
set(SDL_ROOT ${CMAKE_SOURCE_DIR}/external/SDL)

set(GLFW_ROOT ${CMAKE_SOURCE_DIR}/external/glfw)
set(ENTT_ROOT ${CMAKE_SOURCE_DIR}/external/entt)

set(VK_INC_DIR ${VK_ROOT}/Include)
set(VK_LIB_DIR ${VK_ROOT}/Lib)

set(GLM_INC_DIR ${GLM_ROOT})
set(SDL_INC_DIR ${SDL_ROOT}/include)

set(ENTT_INC_DIR ${ENTT_ROOT}/single_include)
set(GLFW_INC_DIR ${GLFW_ROOT}/include)
# get the precompiled lib for now
set(GLFW_LIB_DIR ${CMAKE_SOURCE_DIR}/external/install/lib-vc2019)

set(STB_INC_DIR ${CMAKE_SOURCE_DIR}/external/stb)

set(TINYOBJ_INC ${CMAKE_SOURCE_DIR}/external/tinyobjloader)

add_subdirectory(sandbox)